--- a/index.html
+++ b/index.html
@@ -12,10 +12,7 @@
       type="image/x-icon"
       href="assets/images/favicon.ico"
     />
-    <link
-      rel="stylesheet"
-      href="assets/css/index.css"
-    />
+    <link rel="stylesheet" href="assets/css/index.css" />
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
     <link
       rel="stylesheet"
@@ -36,7 +33,7 @@
                 <div class="logo-area">
                   <a href="index.html"
                     ><img
-                      src="http://www.gzcc.edu.cn/upload/images/2018/1/%E7%BD%91%E7%AB%99LOL.png"
+                      src="./assets/images/logo.png"
                       style="
                         width: 140px;
                         padding: 5px;
@@ -58,7 +55,9 @@
                         <li class="active">
                           <a href="index.html"> 主页</a>
                         </li>
-                        <li><a target="_blank" href="/wjzp.html">往届作品</a></li>
+                        <li>
+                          <a target="_blank" href="/wjzp.html">往届作品</a>
+                        </li>
                         <li>
                           <a target="_blank" href="/kclx.html">课程录像</a>
                         </li>
@@ -98,7 +97,7 @@
         <div class="hero-slider-active owl-carousel">
           <div class="singleSlide" data-black-overlay="3">
             <div class="itemBg">
-              <img src="assets/images/slider/background-image-1.jpg" alt="" />
+              <img src="assets/images/11.jpg" alt="" />
             </div>
             <!-- Hero Content One Start -->
             <div class="container">
@@ -107,59 +106,9 @@
                   <div class="col">
                     <div class="slider-text-info">
                       <h1>
-                        <span>网页设计与制作 </span> <br />
+                        <span>网页设计与制作</span> <br />
                         精品课程资源共享网站
                       </h1>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <!-- Hero Content One End -->
-          </div>
-
-          <div class="singleSlide" data-black-overlay="3">
-            <div class="itemBg">
-              <img src="assets/images/slider/background-image-2.jpg" alt="" />
-            </div>
-            <!-- Hero Content One Start -->
-            <div class="container">
-              <div class="hero-content-one">
-                <div class="row">
-                  <div class="col">
-                    <div class="slider-text-info">
-                      <h1>
-                        <span>Modern Education </span> <br />
-                        For Everyone
-                      </h1>
-                      <a href="about.html" class="btn slider-btn uppercase"
-                        ><span>About us</span></a
-                      >
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <!-- Hero Content One End -->
-          </div>
-
-          <div class="singleSlide" data-black-overlay="3">
-            <div class="itemBg">
-              <img src="assets/images/slider/background-image-3.jpg" alt="" />
-            </div>
-            <!-- Hero Content One Start -->
-            <div class="container">
-              <div class="hero-content-one">
-                <div class="row">
-                  <div class="col">
-                    <div class="slider-text-info">
-                      <h1>
-                        <span>Modern Education </span> <br />
-                        For Everyone
-                      </h1>
-                      <a href="about.html" class="btn slider-btn uppercase"
-                        ><span>About us</span></a
-                      >
                     </div>
                   </div>
                 </div>
@@ -301,133 +250,26 @@
             <div class="col-lg-7 order-lg-2 oreder-2 offset-lg-1">
               <div class="row">
                 <div class="col-lg-12 blog-details-area">
-                  <div class="blog-details-image mt--30">
-                    <img src="assets/images/blog/blog-details-01.jpg" alt="" />
-                  </div>
                   <div class="our-blog-contnet">
                     <h5>
-                      <a href="blog-details.html"
-                        >The word in classical literat.</a
-                      >
+                      <a href="blog-details.html">{{contents[active]}}</a>
                     </h5>
                     <div class="post_meta">
                       <ul>
                         <li>
-                          <p>By: <a href="#">Rehan Khan</a></p>
+                          <p>By: <a href="#">网页设计与制作</a></p>
                         </li>
-                        <li><p>15 Fab 2018</p></li>
                       </ul>
                     </div>
-                    <p>
-                      Non proi dent, sunt in culpa qui officia deserunt mollit
-                      anim id est laborum. Sed ut perspi ci hah iakj atis unde
-                      omnis iste natus error sit volup tatem accu santium dolore
-                      mque lauda ntium, totam rem consequuntur magni dolores eos
-                      qui ratione voluptatem sequi ne ue porro quisquam est, qui
-                      dolorem ipsum quia dolor sit amet, consectetur, adipisci
-                      velit, sed quia non numquam eius modi tempora incidunt ut
-                      labore et dolore magnam aliquam quaerat.
-                    </p>
                   </div>
-                  <p class="mt--30">
-                    Non proi dent, sunt in culpa qui officia deserunt mollit
-                    anim id est laborum. Sed ut perspi ci hah iakj atis unde
-                    omnis iste natus error sit volup tatem accu santium dolore
-                    mque lauda ntium,
-                  </p>
-                  <blockquote class="blockquote-blog mt-30 mb-30">
-                    <p>
-                      Aliquam quaerat.Lorem ipsum dolor sit amet, consectetur
-                      adipisicing elit, sed do eiusmod non numquam eius modi
-                      tempora incidunt ut labore et dolore magnam aliquam .
-                    </p>
-                    <h5>FONTSERRAT</h5>
-                  </blockquote>
-
-                  <p class="mb--30">
-                    MontserratLorem ipsum dolor sit amet, cons ectetur
-                    adipisicing elit, sed do eiusmod tempor hatgg incididunt ut
-                    labore et dolore magna aliqua. Ut enim ad minim veniam, quis
-                    nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                    com vamodo consequat. Duis aute irure dolor in repre.
-                  </p>
-
-                  <div class="row">
-                    <div class="col-lg-6">
-                      <img
-                        src="assets/images/blog/blog-details-02.jpg"
-                        alt=""
-                      />
-                    </div>
-                    <div class="col-lg-6">
-                      <p>
-                        Incididunt qui officia deserunt mollit anim id est
-                        omniexplicabo. Nemo enim ipsam voluptatem quia voluptas
-                        sit aspernatur aut odit aut fugit, sed quia consequuntur
-                        magni dolores eos qui ratione voluptatem sequi nesciunt.
-                        Neque porro quisquam est, qui dolorem ipsum quia .
-                      </p>
-                    </div>
-                  </div>
-
-                  <div class="blog-details-image mt--30">
-                    <img src="assets/images/blog/blog-details-03.jpg" alt="" />
-                  </div>
-
-                  <p class="mt--30">
-                    MontserratLorem ipsum dolor sit amet, cons ectetur
-                    adipisicing elit, sed do eiusmod tempor hatgg incididunt ut
-                    labore et dolore magna aliqua. Ut enim ad minim veniam, quis
-                    nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                    com vamodo con sequat. Duis aute irure dolor in repre
-                    henderit in proident, sunt in culpa qui officia des erunt
-                    mollit anim id est laborum. Sed ut per spiciatis unde qui
-                    dolorem ipsum quia dolor sit amet, consectetur, adipisci
-                    velit, sed quia non numquam eius modi tempora incidunt ut
-                    labore et dolore magnam aliquam quaerat voluptatem.
-                  </p>
-                </div>
-
-                <div class="col-lg-12">
-                  <div class="admin-author-details">
-                    <div class="admin-aouthor">
-                      <div class="admin-image">
-                        <img src="assets/images/review/author-01.png" alt="" />
-                      </div>
-                      <div class="admin-info">
-                        <div class="name">
-                          <h5>Sophia Lourance</h5>
-                          <p>Author</p>
-                        </div>
-
-                        <p>
-                          Lorem ipsum dolor sit amet, consectetur adipisicing
-                          elit, sed do eiusmod tempor incididunt ut laboreUt
-                          enim.
-                        </p>
-                        <ul class="author-socialicons">
-                          <li>
-                            <a href="#"><i class="zmdi zmdi-facebook"></i></a>
-                          </li>
-                          <li>
-                            <a href="#"
-                              ><i class="zmdi zmdi-google-plus"></i
-                            ></a>
-                          </li>
-                          <li>
-                            <a href="#"><i class="zmdi zmdi-twitter"></i></a>
-                          </li>
-                          <li>
-                            <a href="#"><i class="zmdi zmdi-instagram"></i></a>
-                          </li>
-                        </ul>
-                      </div>
-                    </div>
-                  </div>
+                  <iframe :src="'./assets/'+(active+1)+'.pdf'" width="100%" height="800px">
+                    This browser does not support PDFs. Please download the PDF
+                    to view it: <a :href="'./assets/'+(active+1)+'.pdf'">Download PDF</a>
+                  </iframe>
                 </div>
 
                 <!-- blog-details-wrapper -->
-                
+
                 <!--// blog-details-wrapper -->
               </div>
             </div>
@@ -449,8 +291,8 @@
                       <span>课程信息</span>
                     </h4>
                     <ul>
-                      <li v-for="(item,index) in contents" :key="index">
-                        <a href="#"
+                      <li :class="{'active':index==active}" v-for="(item,index) in contents" :key="index">
+                        <a @click="actived(index)"
                           ><span class="categories-name">{{item}}</span></a
                         >
                       </li>
@@ -464,29 +306,7 @@
       </div>
       <!--// Most Popular Courses Area -->
       <!-- Free Introductory Seminar -->
-      <div
-        class="free-introductory-area section-ptb-160 free-introductory-bg"
-        data-black-overlay="6"
-      >
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-8 ml-auto mr-auto">
-              <div class="section-title-three mt--30 mb--30">
-                <h4>How to Get Your Dream Work?</h4>
-                <h3 class="text-white">Free Introductory Seminar</h3>
-                <p class="text-white">
-                  Contrary to popular belief, Lorem Ipsum is not simply random
-                  text. It has roots in a pi classical Latin literature from 45
-                  BC, making it over 2000 years old. Richard McClintock,
-                </p>
-                <div class="free-introductory-btn">
-                  <a href="#" class="introductory-btn">Receive an Invitation</a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
+
       <!--// Free Introductory Seminar -->
 
       <!-- Our Blog Area -->
@@ -499,7 +319,12 @@
       <!-- Testimonials Area -->
 
       <!--// Testimonials Area -->
-      <el-dialog width="80%" :visible.sync="visible" :title="video.url" @close="close">
+      <el-dialog
+        width="80%"
+        :visible.sync="visible"
+        :title="video.url"
+        @close="close"
+      >
         <video
           controls
           style="width: 100%; height: 100%"
@@ -510,107 +335,6 @@
       <!-- Footer Area -->
       <footer class="footer-area">
         <!-- Footer Top Area -->
-        <div class="footer-top section-pb section-pt-60">
-          <div class="container">
-            <div class="row">
-              <div class="col-lg-4 col-md-6 mt--60">
-                <div class="footer-single-block">
-                  <div class="footer-logo">
-                    <a href="index.html"
-                      ><img src="assets/images/logo/logo-2.png" alt=""
-                    /></a>
-                  </div>
-                  <p class="footer-dec">
-                    If you are going to use a passage LorIsum, you anythirassing
-                    hidden in the middle of text. Iators on the Internet tend
-                    to.
-                  </p>
-                  <ul class="footer-social-link">
-                    <li>
-                      <a href="#"><i class="zmdi zmdi-facebook"></i></a>
-                    </li>
-                    <li>
-                      <a href="#"><i class="zmdi zmdi-rss"></i></a>
-                    </li>
-                    <li>
-                      <a href="#"><i class="zmdi zmdi-instagram"></i></a>
-                    </li>
-                    <li>
-                      <a href="#"><i class="zmdi zmdi-pinterest"></i></a>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-
-              <div class="col-lg-2 col-md-6 mt--60">
-                <div class="footer-block">
-                  <h5>Quick Links</h5>
-                  <ul class="footer-list">
-                    <li><a href="#">Privacy Statement</a></li>
-                    <li><a href="#">Teaching Staff</a></li>
-                    <li><a href="#">Report Copyright</a></li>
-                    <li><a href="#">Community</a></li>
-                    <li><a href="#">Schedule</a></li>
-                    <li><a href="#">Discount Program</a></li>
-                  </ul>
-                </div>
-              </div>
-
-              <div class="col-lg-3 col-md-6 mt--60">
-                <div class="footer-block">
-                  <h5>Popular Courses</h5>
-                  <ul class="footer-courses">
-                    <li>
-                      <div class="courses-image">
-                        <a href="#"
-                          ><img
-                            src="assets/images/blog/small-tham/blog-01.jpg"
-                            alt=""
-                        /></a>
-                      </div>
-                      <div class="courses-nifo">
-                        <h5><a href="#">Department of Science.</a></h5>
-                        <p>Duration : 4 Yr</p>
-                      </div>
-                    </li>
-                    <li>
-                      <div class="courses-image">
-                        <a href="#"
-                          ><img
-                            src="assets/images/blog/small-tham/blog-02.jpg"
-                            alt=""
-                        /></a>
-                      </div>
-                      <div class="courses-nifo">
-                        <h5><a href="#">Combined With a Handfull</a></h5>
-                        <p>Duration : 2 Yr</p>
-                      </div>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-
-              <div class="col-lg-3 col-md-6 mt--60">
-                <div class="footer-block">
-                  <h5>NEWSLETTER</h5>
-                  <div class="newsletter-wrap">
-                    <p>
-                      Enter your email and we'll send you more information of.
-                    </p>
-                    <div class="newsletter-input-box">
-                      <form action="#">
-                        <input type="text" placeholder="Your email address" />
-                        <button class="newsletter-button">
-                          <i class="zmdi zmdi-mail-send"></i>
-                        </button>
-                      </form>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
         <!--// Footer Top Area -->
 
         <!-- Footer-bottom Area -->
@@ -620,9 +344,12 @@
               <div class="col-lg-12">
                 <div class="copy-right pt--10 pb--10 text-center text-white">
                   <p>
-                    Copyright© 2018
-                    <a href="http://www.bootstrapmb.com">贵州商学院</a
-                    >网页设计与制作 <span>精品课程资源共享网站</span>
+                    Copyright ©贵州商业高等专科学校计科系 版权所有
+                    地址：贵阳市盐务街35号
+                    <span>精品课程资源共享网站</span>
+                  </p>
+                  <p>
+                    联系电话:0851-8128097 8128057　邮编：550004 技术支持:netsea
                   </p>
                 </div>
               </div>
@@ -658,6 +385,7 @@
             text: '',
             url: '',
           },
+          active: 0,
           visible: false,
           production: [
             {
@@ -682,27 +410,13 @@
             { text: '贵州伊通网', url: '' },
           ],
           contents: [
-            '课程设置-性质作用',
-            '课程设置-理念思路',
-            '教学内容-针对性实用性',
-            '教学内容-内容组织安排',
-            '教学内容-具体表现形式',
-            '方法手段-教学设计创新',
-            '方法手段-多种方法运用',
-            '方法手段-现代技术手段',
-            '方法手段-网络资源环境',
-            '实践条件-实训设备环境',
-            '实践条件-实习基地建设利用',
-            '教学效果-社会评价',
-            '教学效果-社会评价',
-            '教学效果-社会认可度',
-            '特色创新-课程特色创新',
-            '特色创新-同类课程比较',
-            '特色创新-改进方向途径',
-            '特色创新-改进方向途径',
-            '特色创新-改进方向途径',
-            '特色创新-改进方向途径',
-            '特色创新-改进方向途径',
+            '课程设计',
+            '课程内容',
+            '课程条件',
+            '课程实施',
+            '课程效果',
+            '课程特色',
+            '课程大纲',
           ],
           videos: [
             { text: '', url: 'DOM HTML' },
@@ -726,6 +440,9 @@
           ],
         },
         methods: {
+          actived(index) {
+            this.active = index
+          },
           open(item) {
             this.video = item
             this.visible = true
