--- a/wjzp.html
+++ b/wjzp.html
@@ -6,7 +6,6 @@
     <title>网页设计与制作-往届作品</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <!-- Favicon -->
     <link
       rel="shortcut icon"
       type="image/x-icon"
@@ -90,7 +89,6 @@
           </div>
         </div>
       </header>
-      <!-- Hero Slider start -->
       <div class="hero-slider">
         <div class="hero-slider-active owl-carousel">
           <div class="singleSlide" data-black-overlay="3">
@@ -166,12 +164,7 @@
           </div>
         </div>
       </div>
-      <!-- Hero Slider end -->
-      <!-- Our Course Categories Area -->
-
-      <!--// Most Popular Courses Area -->
-      <!-- Free Introductory Seminar -->
-     <div class="most-popular-courses-area section-ptb">
+      <div class="most-popular-courses-area section-ptb">
         <div class="container">
           <div class="row" style="margin-top: 20px; padding-top: 40px">
             <div class="col-lg-8 ml-auto mr-auto">
@@ -201,22 +194,10 @@
                   </div>
                 </div>
               </div>
-              <!--// single-courses -->
             </div>
           </div>
         </div>
       </div>
-      <!--// Free Introductory Seminar -->
-
-      <!-- Our Blog End -->
-
-      <!-- Project Count Area Start -->
-
-      <!-- Project Count Area End -->
-
-      <!-- Testimonials Area -->
-
-      <!--// Testimonials Area -->
       <el-dialog
         width="80%"
         :visible.sync="visible"
@@ -230,136 +211,27 @@
           :src="'./assets/video/'+video.url+'.mp4'"
         ></video>
       </el-dialog>
-      <!-- Footer Area -->
       <footer class="footer-area">
-        <!-- Footer Top Area -->
-        <div class="footer-top section-pb section-pt-60">
-          <div class="container">
-            <div class="row">
-              <div class="col-lg-4 col-md-6 mt--60">
-                <div class="footer-single-block">
-                  <div class="footer-logo">
-                    <a href="index.html"
-                      ><img src="assets/images/logo/logo-2.png" alt=""
-                    /></a>
-                  </div>
-                  <p class="footer-dec">
-                    If you are going to use a passage LorIsum, you anythirassing
-                    hidden in the middle of text. Iators on the Internet tend
-                    to.
-                  </p>
-                  <ul class="footer-social-link">
-                    <li>
-                      <a href="#"><i class="zmdi zmdi-facebook"></i></a>
-                    </li>
-                    <li>
-                      <a href="#"><i class="zmdi zmdi-rss"></i></a>
-                    </li>
-                    <li>
-                      <a href="#"><i class="zmdi zmdi-instagram"></i></a>
-                    </li>
-                    <li>
-                      <a href="#"><i class="zmdi zmdi-pinterest"></i></a>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-
-              <div class="col-lg-2 col-md-6 mt--60">
-                <div class="footer-block">
-                  <h5>Quick Links</h5>
-                  <ul class="footer-list">
-                    <li><a href="#">Privacy Statement</a></li>
-                    <li><a href="#">Teaching Staff</a></li>
-                    <li><a href="#">Report Copyright</a></li>
-                    <li><a href="#">Community</a></li>
-                    <li><a href="#">Schedule</a></li>
-                    <li><a href="#">Discount Program</a></li>
-                  </ul>
-                </div>
-              </div>
-
-              <div class="col-lg-3 col-md-6 mt--60">
-                <div class="footer-block">
-                  <h5>Popular Courses</h5>
-                  <ul class="footer-courses">
-                    <li>
-                      <div class="courses-image">
-                        <a href="#"
-                          ><img
-                            src="assets/images/blog/small-tham/blog-01.jpg"
-                            alt=""
-                        /></a>
-                      </div>
-                      <div class="courses-nifo">
-                        <h5><a href="#">Department of Science.</a></h5>
-                        <p>Duration : 4 Yr</p>
-                      </div>
-                    </li>
-                    <li>
-                      <div class="courses-image">
-                        <a href="#"
-                          ><img
-                            src="assets/images/blog/small-tham/blog-02.jpg"
-                            alt=""
-                        /></a>
-                      </div>
-                      <div class="courses-nifo">
-                        <h5><a href="#">Combined With a Handfull</a></h5>
-                        <p>Duration : 2 Yr</p>
-                      </div>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-
-              <div class="col-lg-3 col-md-6 mt--60">
-                <div class="footer-block">
-                  <h5>NEWSLETTER</h5>
-                  <div class="newsletter-wrap">
-                    <p>
-                      Enter your email and we'll send you more information of.
-                    </p>
-                    <div class="newsletter-input-box">
-                      <form action="#">
-                        <input type="text" placeholder="Your email address" />
-                        <button class="newsletter-button">
-                          <i class="zmdi zmdi-mail-send"></i>
-                        </button>
-                      </form>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <!--// Footer Top Area -->
-
-        <!-- Footer-bottom Area -->
         <div class="footer-bottom">
           <div class="container">
             <div class="row">
               <div class="col-lg-12">
                 <div class="copy-right pt--10 pb--10 text-center text-white">
                   <p>
-                    Copyright© 2018
-                    <a href="http://www.bootstrapmb.com">贵州商学院</a
-                    >网页设计与制作 <span>精品课程资源共享网站</span>
+                    Copyright ©贵州商业高等专科学校计科系 版权所有
+                    地址：贵阳市盐务街35号
+                    <span>精品课程资源共享网站</span>
+                  </p>
+                  <p>
+                    联系电话:0851-8128097 8128057　邮编：550004 技术支持:netsea
                   </p>
                 </div>
               </div>
             </div>
           </div>
         </div>
-        <!--// Footer-botton Area -->
       </footer>
-      <!--// Footer Area -->
     </div>
-    <!-- Main Wrapper End -->
-    <!-- JS
-============================================ -->
-    <!-- jQuery JS -->
     <script src="assets/js/vendor/jquery-3.3.1.min.js"></script>
     <!-- Popper JS -->
     <script src="assets/js/popper.min.js"></script>
