--- a/kclx.html
+++ b/kclx.html
@@ -243,127 +243,24 @@
       </el-dialog>
       <!-- Footer Area -->
       <footer class="footer-area">
-        <!-- Footer Top Area -->
-        <div class="footer-top section-pb section-pt-60">
-          <div class="container">
-            <div class="row">
-              <div class="col-lg-4 col-md-6 mt--60">
-                <div class="footer-single-block">
-                  <div class="footer-logo">
-                    <a href="index.html"
-                      ><img src="assets/images/logo/logo-2.png" alt=""
-                    /></a>
-                  </div>
-                  <p class="footer-dec">
-                    If you are going to use a passage LorIsum, you anythirassing
-                    hidden in the middle of text. Iators on the Internet tend
-                    to.
-                  </p>
-                  <ul class="footer-social-link">
-                    <li>
-                      <a href="#"><i class="zmdi zmdi-facebook"></i></a>
-                    </li>
-                    <li>
-                      <a href="#"><i class="zmdi zmdi-rss"></i></a>
-                    </li>
-                    <li>
-                      <a href="#"><i class="zmdi zmdi-instagram"></i></a>
-                    </li>
-                    <li>
-                      <a href="#"><i class="zmdi zmdi-pinterest"></i></a>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-
-              <div class="col-lg-2 col-md-6 mt--60">
-                <div class="footer-block">
-                  <h5>Quick Links</h5>
-                  <ul class="footer-list">
-                    <li><a href="#">Privacy Statement</a></li>
-                    <li><a href="#">Teaching Staff</a></li>
-                    <li><a href="#">Report Copyright</a></li>
-                    <li><a href="#">Community</a></li>
-                    <li><a href="#">Schedule</a></li>
-                    <li><a href="#">Discount Program</a></li>
-                  </ul>
-                </div>
-              </div>
-
-              <div class="col-lg-3 col-md-6 mt--60">
-                <div class="footer-block">
-                  <h5>Popular Courses</h5>
-                  <ul class="footer-courses">
-                    <li>
-                      <div class="courses-image">
-                        <a href="#"
-                          ><img
-                            src="assets/images/blog/small-tham/blog-01.jpg"
-                            alt=""
-                        /></a>
-                      </div>
-                      <div class="courses-nifo">
-                        <h5><a href="#">Department of Science.</a></h5>
-                        <p>Duration : 4 Yr</p>
-                      </div>
-                    </li>
-                    <li>
-                      <div class="courses-image">
-                        <a href="#"
-                          ><img
-                            src="assets/images/blog/small-tham/blog-02.jpg"
-                            alt=""
-                        /></a>
-                      </div>
-                      <div class="courses-nifo">
-                        <h5><a href="#">Combined With a Handfull</a></h5>
-                        <p>Duration : 2 Yr</p>
-                      </div>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-
-              <div class="col-lg-3 col-md-6 mt--60">
-                <div class="footer-block">
-                  <h5>NEWSLETTER</h5>
-                  <div class="newsletter-wrap">
-                    <p>
-                      Enter your email and we'll send you more information of.
-                    </p>
-                    <div class="newsletter-input-box">
-                      <form action="#">
-                        <input type="text" placeholder="Your email address" />
-                        <button class="newsletter-button">
-                          <i class="zmdi zmdi-mail-send"></i>
-                        </button>
-                      </form>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <!--// Footer Top Area -->
-
-        <!-- Footer-bottom Area -->
         <div class="footer-bottom">
           <div class="container">
             <div class="row">
               <div class="col-lg-12">
                 <div class="copy-right pt--10 pb--10 text-center text-white">
                   <p>
-                    Copyright© 2018
-                    <a href="http://www.bootstrapmb.com">贵州商学院</a
-                    >网页设计与制作 <span>精品课程资源共享网站</span>
+                    Copyright ©贵州商业高等专科学校计科系 版权所有
+                    地址：贵阳市盐务街35号
+                    <span>精品课程资源共享网站</span>
+                  </p>
+                  <p>
+                    联系电话:0851-8128097 8128057　邮编：550004 技术支持:netsea
                   </p>
                 </div>
               </div>
             </div>
           </div>
         </div>
-        <!--// Footer-botton Area -->
       </footer>
       <!--// Footer Area -->
     </div>
