--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
                       </ul>
                     </div>
                   </div>
-                  <iframe :src="'./assets/'+(active+1)+'.pdf'" width="100%" height="800px">
+                  <iframe :src="'./assets/'+(active+1)+'.pdf'" width="100%" height="1000px">
                     This browser does not support PDFs. Please download the PDF
                     to view it: <a :href="'./assets/'+(active+1)+'.pdf'">Download PDF</a>
                   </iframe>
@@ -304,21 +304,6 @@
           </div>
         </div>
       </div>
-      <!--// Most Popular Courses Area -->
-      <!-- Free Introductory Seminar -->
-
-      <!--// Free Introductory Seminar -->
-
-      <!-- Our Blog Area -->
-      <!-- Our Blog End -->
-
-      <!-- Project Count Area Start -->
-
-      <!-- Project Count Area End -->
-
-      <!-- Testimonials Area -->
-
-      <!--// Testimonials Area -->
       <el-dialog
         width="80%"
         :visible.sync="visible"
@@ -332,20 +317,15 @@
           :src="'./assets/video/'+video.url+'.mp4'"
         ></video>
       </el-dialog>
-      <!-- Footer Area -->
       <footer class="footer-area">
-        <!-- Footer Top Area -->
-        <!--// Footer Top Area -->
-
-        <!-- Footer-bottom Area -->
         <div class="footer-bottom">
           <div class="container">
             <div class="row">
               <div class="col-lg-12">
                 <div class="copy-right pt--10 pb--10 text-center text-white">
                   <p>
-                    Copyright ©贵州商业高等专科学校计科系 版权所有
-                    地址：贵阳市盐务街35号
+                    Copyright ©贵州商学院计算机与信息工程学院 版权所有
+                    地址：贵阳市白云区麦架镇1号
                     <span>精品课程资源共享网站</span>
                   </p>
                   <p>
@@ -356,24 +336,13 @@
             </div>
           </div>
         </div>
-        <!--// Footer-botton Area -->
       </footer>
-      <!--// Footer Area -->
     </div>
-    <!-- Main Wrapper End -->
-    <!-- JS
-============================================ -->
-    <!-- jQuery JS -->
     <script src="assets/js/vendor/jquery-3.3.1.min.js"></script>
-    <!-- Popper JS -->
     <script src="assets/js/popper.min.js"></script>
-    <!-- Bootstrap JS -->
     <script src="assets/js/bootstrap.min.js"></script>
-    <!-- Plugins JS -->
     <script src="assets/js/plugins.js"></script>
-    <!-- Ajax Mail -->
     <script src="assets/js/ajax-mail.js"></script>
-    <!-- Main JS -->
     <script src="assets/js/main.js"></script>
     <script src="assets/js/vue.min.js"></script>
     <script src="assets/js/index.js"></script>
