--- a/kclx.html
+++ b/kclx.html
@@ -117,56 +117,6 @@
             </div>
             <!-- Hero Content One End -->
           </div>
-
-          <div class="singleSlide" data-black-overlay="3">
-            <div class="itemBg">
-              <img src="assets/images/slider/background-image-2.jpg" alt="" />
-            </div>
-            <!-- Hero Content One Start -->
-            <div class="container">
-              <div class="hero-content-one">
-                <div class="row">
-                  <div class="col">
-                    <div class="slider-text-info">
-                      <h1>
-                        <span>Modern Education </span> <br />
-                        For Everyone
-                      </h1>
-                      <a href="about.html" class="btn slider-btn uppercase"
-                        ><span>About us</span></a
-                      >
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <!-- Hero Content One End -->
-          </div>
-
-          <div class="singleSlide" data-black-overlay="3">
-            <div class="itemBg">
-              <img src="assets/images/slider/background-image-3.jpg" alt="" />
-            </div>
-            <!-- Hero Content One Start -->
-            <div class="container">
-              <div class="hero-content-one">
-                <div class="row">
-                  <div class="col">
-                    <div class="slider-text-info">
-                      <h1>
-                        <span>Modern Education </span> <br />
-                        For Everyone
-                      </h1>
-                      <a href="about.html" class="btn slider-btn uppercase"
-                        ><span>About us</span></a
-                      >
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <!-- Hero Content One End -->
-          </div>
         </div>
       </div>
       <!-- Hero Slider end -->
@@ -249,8 +199,8 @@
               <div class="col-lg-12">
                 <div class="copy-right pt--10 pb--10 text-center text-white">
                   <p>
-                    Copyright ©贵州商业高等专科学校计科系 版权所有
-                    地址：贵阳市盐务街35号
+                    Copyright ©贵州商学院计算机与信息工程学院 版权所有
+                    地址：贵阳市白云区麦架镇1号
                     <span>精品课程资源共享网站</span>
                   </p>
                   <p>
