--- a/wjzp.html
+++ b/wjzp.html
@@ -93,7 +93,7 @@
         <div class="hero-slider-active owl-carousel">
           <div class="singleSlide" data-black-overlay="3">
             <div class="itemBg">
-              <img src="assets/images/slider/background-image-1.jpg" alt="" />
+              <img src="assets/images/11.jpg" alt="" />
             </div>
             <!-- Hero Content One Start -->
             <div class="container">
@@ -112,56 +112,6 @@
             </div>
             <!-- Hero Content One End -->
           </div>
-
-          <div class="singleSlide" data-black-overlay="3">
-            <div class="itemBg">
-              <img src="assets/images/slider/background-image-2.jpg" alt="" />
-            </div>
-            <!-- Hero Content One Start -->
-            <div class="container">
-              <div class="hero-content-one">
-                <div class="row">
-                  <div class="col">
-                    <div class="slider-text-info">
-                      <h1>
-                        <span>Modern Education </span> <br />
-                        For Everyone
-                      </h1>
-                      <a href="about.html" class="btn slider-btn uppercase"
-                        ><span>About us</span></a
-                      >
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <!-- Hero Content One End -->
-          </div>
-
-          <div class="singleSlide" data-black-overlay="3">
-            <div class="itemBg">
-              <img src="assets/images/slider/background-image-3.jpg" alt="" />
-            </div>
-            <!-- Hero Content One Start -->
-            <div class="container">
-              <div class="hero-content-one">
-                <div class="row">
-                  <div class="col">
-                    <div class="slider-text-info">
-                      <h1>
-                        <span>Modern Education </span> <br />
-                        For Everyone
-                      </h1>
-                      <a href="about.html" class="btn slider-btn uppercase"
-                        ><span>About us</span></a
-                      >
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <!-- Hero Content One End -->
-          </div>
         </div>
       </div>
       <div class="most-popular-courses-area section-ptb">
@@ -170,7 +120,7 @@
             <div class="col-lg-8 ml-auto mr-auto">
               <div class="section-title-two">
                 <h4 id="wjzp">往届学生服务企业</h4>
-                <h3>精彩集锦</h3>
+                <h3>精彩案例</h3>
               </div>
             </div>
           </div>
@@ -218,8 +168,8 @@
               <div class="col-lg-12">
                 <div class="copy-right pt--10 pb--10 text-center text-white">
                   <p>
-                    Copyright ©贵州商业高等专科学校计科系 版权所有
-                    地址：贵阳市盐务街35号
+                    Copyright ©贵州商学院计算机与信息工程学院 版权所有
+                    地址：贵阳市白云区麦架镇1号
                     <span>精品课程资源共享网站</span>
                   </p>
                   <p>
