--- a/kclx.html
+++ b/kclx.html
@@ -48,22 +48,21 @@
                 </div>
                 <!--// logo-area -->
               </div>
-
               <div class="col-lg-9 col-md-7 col-6">
                 <div class="header-bottom-right">
                   <!-- main-menu -->
                   <div class="main-menu">
                     <nav class="main-navigation">
                       <ul>
-                        <li class="active">
+                        <li >
                           <a href="index.html"> 主页</a>
                         </li>
-                        <li><a href="#wjzp">往届作品</a></li>
-                        <li>
-                          <a href="#kclx">课程录像</a>
+                        <li><a href="wjzp.html">往届作品</a></li>
+                        <li class="active">
+                          <a href="kclx.html">课程录像</a>
                         </li>
                         <li>
-                          <a href="#xxzy">学习资源</a>
+                          <a href="xxzy.html">学习资源</a>
                         </li>
                       </ul>
                     </nav>
@@ -83,7 +82,6 @@
                   </div>
                 </div>
               </div>
-
               <div class="col">
                 <!-- mobile-menu start -->
                 <div class="mobile-menu d-block d-lg-none"></div>
@@ -98,7 +96,7 @@
         <div class="hero-slider-active owl-carousel">
           <div class="singleSlide" data-black-overlay="3">
             <div class="itemBg">
-              <img src="assets/images/slider/background-image-1.jpg" alt="" />
+              <img src="assets/images/11.jpg" alt="" />
             </div>
             <!-- Hero Content One Start -->
             <div class="container">
